# sdk-rs

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  rust.yml
examples/: chain_info.rs  evm_block_number.rs  grpc_latest_block.rs  sign_native_transfer.rs  websocket_subscribe.rs
proto/: sentrix.proto
src/: bft.rs  evm.rs  lib.rs  native.rs  network.rs  wallet.rs
src/grpc/: mod.rs  pb.rs
