[package]
name = "sentrix-chain"
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"
description = "Official Rust SDK for Sentrix Chain — typed clients for native REST, EVM, gRPC, and secp256k1 wallet/signing."
homepage = "https://sentrixchain.com"
repository = "https://github.com/Sentriscloud/sdk-rs"
documentation = "https://docs.sentrixchain.com"
keywords = ["sentrix", "sentrixchain", "evm", "blockchain", "sdk"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
readme = "README.md"

[features]
# Trim deps per surface; consumers opt into what they actually use.
# Default = network spec + native REST. EVM and gRPC pull heavier
# transitive deps so they stay opt-in.
default = ["native"]
network = []
native = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json", "dep:thiserror"]
wallet = ["dep:secp256k1", "dep:sha2", "dep:tiny-keccak", "dep:hex", "dep:serde", "dep:serde_json", "dep:thiserror", "native"]
# evm and grpc are scaffolded behind features but not implemented yet —
# alpha.0 ships the network spec + native client foundation.
evm = ["dep:alloy", "dep:url", "network"]
grpc = ["dep:tonic", "dep:sentrix-proto", "dep:tokio", "dep:futures", "dep:hex", "dep:thiserror", "network"]
bft = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures", "dep:serde", "dep:serde_json", "dep:thiserror", "network"]

[dependencies]
# Network spec — always available, no feature gate.
# Native REST stack
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = { version = "2", optional = true }

# Wallet / signing
secp256k1 = { version = "0.31", optional = true, features = ["recovery", "global-context"] }
sha2 = { version = "0.11", optional = true }
tiny-keccak = { version = "2", optional = true, features = ["keccak"] }
hex = { version = "0.4", optional = true }

# EVM (alloy)
alloy = { version = "2.0", optional = true, features = ["providers", "rpc-types-eth", "transport-http", "reqwest-rustls-tls"] }
url = { version = "2", optional = true }

# gRPC (tonic) — proto types come from the published `sentrix-proto`
# crate which the chain repo also consumes server-side, so the schema
# stays single-source-of-truth.
tonic = { version = "0.14", optional = true, features = ["tls-ring", "tls-native-roots"] }
sentrix-proto = { version = "0.1.1", optional = true }
futures = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.29", optional = true, features = ["rustls-tls-native-roots"] }


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"
